fix: spacing on modal form

--- a/style.css
+++ b/style.css
@@ -157,6 +157,9 @@ input {
     padding: 2rem;
     border-radius: 16px;
     background: #ffffff;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
     & button[type="submit"] {
         padding: 0.7rem;
@@ -170,7 +173,6 @@ input {
 #contactForm {
     display: grid;
     gap: 1rem;
-    margin: 1rem 0;
 }
 
 .form-group {
